--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>React App</title>
+    <title>Tehco</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
